  - #1581, ST_Clip(raster, ...) no longer imposes NODATA on a band if the
           corresponding band from the source raster did not have NODATA
  - #2072, Removed outdated checks preventing ST_Intersects(raster) from
           working on out-db bands
  - #2077, Fixed incorrect answers from ST_Hillshade(raster)
  - #2015, ST_IsEmpty('POLYGON(EMPTY)') returns False


 * Enhancements *

  - #2087, Speedup topology.GetRingEdges using a recursive CTE 
  - #2082, Add indices on start_node and end_node of topology edge tables
  - #1928, Accept array properties in GML input multi-geom input
    (Kashif Rasul and Shoaib Burq / SpacialDB)

PostGIS 2.0.1
2012/06/22

* Bug Fixes *

  - #1264, fix st_dwithin(geog, geog, 0). 
  - #1468  shp2pgsql-gui table column schema get shifted
  - #1694, fix building with clang. (vince)
  - #1708, improve restore of pre-PostGIS 2.0 backups.
  - #1714, more robust handling of high topology tolerance.
  - #1755, ST_GeographyFromText support for higher dimensions.
  - #1759, loading transformed shapefiles in raster enabled db.
  - #1761, handling of subdatasets in NetCDF, HDF4 and HDF5 in raster2pgsql.
  - #1763, topology.toTopoGeom use with custom search_path.
  - #1766, don't let ST_RemEdge* destroy peripheral TopoGeometry objects.
  - #1774, Clearer error on setting an edge geometry to an invalid one.
  - #1775, ST_ChangeEdgeGeom collision detection with 2-vertex target.
  - #1776, fix ST_SymDifference(empty, geom) to return geom.
  - #1779, install SQL comment files.
  - #1782, fix spatial reference string handling in raster.
  - #1789, fix false edge-node crossing report in ValidateTopology.
  - #1790, fix toTopoGeom handling of duplicated primitives.
  - #1791, fix ST_Azimuth with very close but distinct points.
  - #1797, fix (ValidateTopology(xxx)).* syntax calls.
  - #1805, put back the 900913 SRID entry.
  - #1813, Only show readable relations in metadata tables. 
  - #1819, fix floating point issues with ST_World2RasterCoord and